--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -10,7 +10,7 @@
   </div>
   <h2><%= @group.title %></h2>
   <p><%= @group.description %></p>
-  
+
   <table class="table">
     <thead>
      <tr>
@@ -29,5 +29,9 @@
       <% end %>
     </tbody>
   </table>
+
+  <div class="text-center">
+     <%= will_paginate @posts %>
+   </div>
 
 </div>
